Requested changes are made after code review
Changes are as follows:

- README.md reflects new test folder name
- README.md is present tense where required
- Tense is corrected in test file.
- __tests__/ is now test/
- jestSetup.js is now in the snippet/test/ directory
- jestSetup.js is now called setup.js

--- a/snippet/package.json
+++ b/snippet/package.json
@@ -17,12 +17,12 @@
   },
   "jest": {
     "verbose": true,
-    "setupFiles": ["./jestSetup.js"],
+    "setupFiles": ["./test/setup.js"],
     "collectCoverage": true,
     "coverageDirectory": "<rootDir>/coverage/",
     "collectCoverageFrom": [
       "**/*.js",
-      "!**/jestSetup.js",
+      "!**/setup.js",
       "!**/coverage/**",
       "!**/node_modules/**"
     ],
