Snippet: Added Jest and Sinon for automated testing  (#26)
* Added Jest and Sinon as for automated testing

I added Jest because it is addressed in the issue #12. It is also
the growing standard, and easy for individuals to pick up if they
have never touched unit testing before. Sinon is a non-framework
dependant JavaScript mocking library. This means either Jest or
Sinon could be swapped out more easilly later.

I have set the current coverage cut off to a typically low 30%.
This is to make unit tests not absolutely required for participation
in the project.

I've taken the libery of writing the first function's tests to
help test the test suite, and provide a template for people to
checkout if they want to write laters. The function is pipe().

I've written robust documentation and put it in README.md

* Requested changes are made after code review

Changes are as follows:

- README.md reflects new test folder name
- README.md is present tense where required
- Tense is corrected in test file.
- __tests__/ is now test/
- jestSetup.js is now in the snippet/test/ directory
- jestSetup.js is now called setup.js

--- a/snippet/package.json
+++ b/snippet/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "repository": {},
   "license": "MIT",
-
   "scripts": {
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "test": "jest"
   },
   "lint-staged": {
     "gitDir": "../",
@@ -15,11 +15,31 @@
       "git add"
     ]
   },
-
+  "jest": {
+    "verbose": true,
+    "setupFiles": ["./test/setup.js"],
+    "collectCoverage": true,
+    "coverageDirectory": "<rootDir>/coverage/",
+    "collectCoverageFrom": [
+      "**/*.js",
+      "!**/setup.js",
+      "!**/coverage/**",
+      "!**/node_modules/**"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 30,
+        "functions": 30,
+        "lines": 30,
+        "statements": 30
+      }
+    }
+  },
   "devDependencies": {
     "husky": "^0.13.3",
+    "jest": "^19.0.2",
     "lint-staged": "^3.4.0",
-    "prettier": "^1.2.2"
+    "prettier": "^1.2.2",
+    "sinon": "^2.1.0"
   }
-
 }
