Moved the circle.yml so it would be recognised
- Need to specify pwd: <DIRECTORY> so that it will (hopefully)
run in the proper directory.

This is the first time I've done this multi-package repo thing so
this may fail again.

--- a/circle.yml
+++ b/circle.yml
@@ -1,9 +1,15 @@
+general:
+  build_dir:
+    snippet
+
 dependencies:
   override:
     - yarn
+      pwd: snippets
   cache_directories:
     - ~/.cache/yarn
 
 test:
   override:
     - yarn run test
+      pwd: snippets
