--- a/circle.yml
+++ b/circle.yml
@@ -14,5 +14,5 @@ test:
   override:
     - yarn run test:
         pwd: snippet
-    - elm-make main.elm:
+    - elm-make main.elm --yes:
         pwd: client
