--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,8 @@ dependencies:
         pwd: snippet
     - yarn add elm:
         pwd: client
-    - elm-package install --yes:
+    - ./node_modules/.bin/elm-package install --yes:
+        pwd: client
   cache_directories:
     - ~/.cache/yarn
     - elm-stuff/
@@ -17,5 +18,5 @@ test:
   override:
     - yarn run test:
         pwd: snippet
-    - ./node_modules/elm-make main.elm --yes:
+    - ./node_modules/.bin/elm-make main.elm --yes:
         pwd: client
