--- a/snippet/package.json
+++ b/snippet/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "precommit": "lint-staged",
     "test": "jest",
-    "dev" : "node_modules/.bin/json-server --watch backend/db.json"
+    "dev": "node_modules/.bin/json-server --watch backend/db.json",
+    "example": "node_modules/.bin/live-server --port=5566 --open='/example.html' "
   },
   "lint-staged": {
     "gitDir": "../",
@@ -18,7 +19,9 @@
   },
   "jest": {
     "verbose": true,
-    "setupFiles": ["./test/setup.js"],
+    "setupFiles": [
+      "./test/setup.js"
+    ],
     "collectCoverage": true,
     "coverageDirectory": "<rootDir>/coverage/",
     "collectCoverageFrom": [
@@ -40,6 +43,7 @@
     "husky": "^0.13.3",
     "jest": "^19.0.2",
     "lint-staged": "^3.4.0",
+    "live-server": "^1.2.0",
     "prettier": "^1.2.2",
     "sinon": "^2.1.0"
   },
