--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,15 @@
 version: '3'
 services:
   snippet:
-    build: snippet/
-    volumes:
-      - '.:/snippet/'
+    # what we are building from -> our local ap directory
+    build:
+      context: ./snippet/
+      # dockerfile: /Dockerfile
     ports:
-      - "5566:5566"
-volumes:
-  logvolume01: {}
+      - '5566:5566'
+    # mount our build path ^ into -> the following path:
+    volumes:
+      - .:/home/app/snippet
+      # use a separate volume for node modules because using a BIND causes problems.
+      # see "the node_modules trick " here :http://jdlm.info/articles/2016/03/06/lessons-building-node-app-docker.html
+      - /home/app/snippet/node_modules
