copy webpack config. still borked.

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -10,6 +10,7 @@ ENV HOME=/home/app
 # Copy over our package json to the home folder
 COPY package.json $HOME/client/
 COPY elm-package.json $HOME/client/
+COPY webpack.config.js $HOME/client/
 
 # We need to change ownership as files are copied to a root user permission set
 RUN chown -R app:app $HOME/*
