--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,2 +1,9 @@
+click==6.7
 Flask==0.12.2
 Flask-Cors==3.0.2
+itsdangerous==0.24
+Jinja2==2.9.6
+MarkupSafe==1.0
+six==1.10.0
+tinydb==3.2.3
+Werkzeug==0.12.2
