--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
       - '5566:5566'
     # mount our build path ^ into -> the following path:
     volumes:
-      - .:/home/app/snippet
+    #  mount /snippet/ (local) -> container: /home/app/snippet
+      - ./snippet:/home/app/snippet
       # use a separate volume for node modules because using a BIND causes problems.
       # see "the node_modules trick " here :http://jdlm.info/articles/2016/03/06/lessons-building-node-app-docker.html
       - /home/app/snippet/node_modules
@@ -17,8 +18,12 @@ services:
     build:
       context: ./client/
     ports:
-      - '8877:8877'
+      - '4001:4001'
+    # this
     volumes:
-      - .:/home/app/client
+      - ./client:/home/app/client
+      # we install packages TO THE CONTAINER.
+      # becuase we're sharing it, it'll show up locally.
       - /home/app/client/node_modules
+      # remember to rename this to elm-stuff
       - /home/app/client/elm_stuff
